[HG-8]: Fixed delete scrollbar, edit divider bar, layout site-left and site-right

--- a/src/pages/admin/AdminPage.scss
+++ b/src/pages/admin/AdminPage.scss
@@ -5,7 +5,6 @@
     min-height: 100vh;
 
     .sidebar {
-        overflow: auto;
         background-image:
             linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(48, 48, 48, 0.5)),
             url('../../assets/images/sneaker.jpg');
@@ -19,10 +18,11 @@
             height: 1px;
             background-color: $white-2;
             margin-bottom: 30px;
+            margin-top: 4px;
         }
 
         .logo {
-            height: 64px;
+            height: 60px;
             background: transparent;
 
             .logo-admin {
@@ -41,14 +41,14 @@
     }
 
     .site-layout {
-        .site-layout-background {
+        .header-layout {
             background-color: $white;
+            width: 100%;
             display: flex;
             justify-content: space-between;
 
             .site-layout-right {
-                width: 300px;
-                margin-top: 4px;
+                width: 400px;
                 display: flex;
                 justify-content: space-around;
 
@@ -81,10 +81,14 @@
 
 
             .site-layout-left {
-                margin-top: 12px;
                 width: 400px;
+                position: relative;
 
                 .input-search {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
                     .ant-input {
                         height: 40px;
                         background-color: $white-1;
